--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "build.js",
   "scripts": {
     "test": "jest",
-    "start": "node src/index.js"
+    "start": "babel-node src/index.js",
+    "start-prod": "npm run build && node build/index.js",
+    "build": "babel src/ --out-dir build/"
   },
   "keywords": [],
   "author": "autumn crossan",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.12.11",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
