--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start-prod": "npm run build && node build/index.js",
     "build": "babel src/ --out-dir build/"
   },
+  "bin": {
+    "demand": "./build/index.js"
+  },
   "keywords": [],
   "author": "autumn crossan",
   "license": "ISC",
